# grand-ai-hotel

./: .cspell.json  .gitignore  .markdownlint.json  .markdownlint2.json  .markdownlintignore  .svglintrc.json  DEPENDENCIES.md  IMPLEMENTATION-EXAMPLES-LABS.md  IMPLEMENTATION-PLAN.md  README.md  ROADMAP.md  SBOM-SUMMARY.md  SBOM_SUMMARY.md  SECURITY.md  TERMS.md  copilot_models_20260221.txt  genaiscript_models_20260221.txt  justfile  main.py  prek.toml  pyproject.toml  skills-lock.json  temp_issue_body.md
.github/: DEPENDENCY-CHECKLIST.md  DEPENDENCY-CONFIG.md  DEPENDENCY_CHECKLIST.md  ISSUE_WASM_FIXES.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  upgrade.md
.github/SECURITY/: azure-credentials.md  credential-management.md  github-secrets.md  https-local-dev.md  secret-scanning.md
.github/agents/: agatha.agent.md  dmitri.agent.md  henckels.agent.md  ludwig.agent.md  m-gustave.agent.md  serge.agent.md  zero.agent.md
.github/hooks/: hooks.json
.github/instructions/: MODEL-CONFIG.md  README.md  TROUBLESHOOTING.md  python-coding-standards.instructions.md
.github/prompts/: README.md  setup-python-nlp-project.prompt.md
.github/skills/: README.md  agent-personas-diagram.md  quick-reference.md
.github/skills/wiki-onboarding/: SKILL.md
.github/skills/wiki-researcher/: SKILL.md
.github/standards/: agent-collaboration.md  claude-best-practices.md  copilot-best-practices.md  token-budgeting.md
.github/workflows/: CHANGELOG.md  README.md  deploy-wasm-playground.yml  markdown-lint.yml  monthly-security-review.yml  test-wasm-playground.yml  weekly-readme-update.yml
docs/: REMOVED-DEPENDENCIES.md  REMOVED_DEPENDENCIES.md
docs/planning/: modern-typing-agentic-tools-plan.md
examples/clojure/: .github-workflows-example.yml  COMPLETE.md  GETTING-STARTED.md  IMPLEMENTATION-SUMMARY.md  Makefile.ps1  README.md  TESTING.md  deps.edn  sample-requirements.md
examples/clojure/sample-python/: README.md  auth.py  insecure_db.py
examples/dotnet/app-modernization-45-to-11/: README.md
examples/javascript/: .justfile  README.md
examples/javascript/browser-agents/: README.md  index.html  package.json  vitest.config.js
examples/javascript/service-worker/: README.md  index.html  manifest.json  offline.html  package.json  sw.js  vitest.config.js
examples/nodejs/: OVERVIEW.md  README.md
examples/nodejs/express-copilot/: README.md  package.json  server.js
examples/nodejs/github-integration/: README.md  auth.js  github-client.js  package.json  webhooks.js
examples/nodejs/stream-processing/: README.md  package.json
examples/python/: IMPLEMENTATION_SUMMARY.md  README.md
examples/typescript/: .gitignore  .justfile  EXAMPLES-SUMMARY.md  biome.json  package.json  tsconfig.json  vitest.config.ts
examples/wasm/: .gitignore  IMPLEMENTATION_PLAN.md  ISSUES_SUMMARY.md  README.md  package.json  pyproject.toml
examples/wasm/src/: index.html  main.js
examples/wasm/src/js/: pyodide-loader.js  python-runner.js
examples/wasm/src/js/agents/: agatha.js  base-agent.js  dmitri.js  gustave.js  ludwig.js  serge.js
examples/wasm/src/js/ui/: editor.js
examples/wasm/src/python/: ast_analyzer.py  security_scanner.py
examples/wasm/src/styles/: main.css
examples/wasm/webgpu-fireworks/: .gitignore  DEBUG-GUIDE.md  DIAGNOSTIC-SUMMARY.md  FEATURES.md  GENRES.md  QUICKSTART.md  README.md  SETUP.md  VECTREX-CONTROLS.md  VECTREX-UPDATE.md  VECTREX.md  audio-engine.js  index.html  main.js  package.json  particle-system.js  renderer.js  run-diagnostics.js  test-particle-logic.js  test-render-debug.html  vite.config.js
labs/gcp/: LABS_SUMMARY.md  README.md  gcp-deployments.md  gcp-getting-started.md  gcp-security-guardrails.md
labs/vercel/: PROJECT-SUMMARY.md  QUICK-START.md  README.md  vercel-deployment-patterns.md  vercel-getting-started.md  vercel-nextjs-agents.md
notebooks/: SMS_MONITOR_README.md  sample_sms.py  sms_monitor.py
src/models/: __init__.py
src/nlp/: __init__.py
tutorials/: clojure-functional-verification.md  copilot-cli-slash-commands.md  copilot-sdk-powerpoint-automation.md  copilot-skills-llms-swiss-alps.md  dotnet-10-ai-agents.md  dotnet-app-modernization-45-to-11.md  grand-budapest-cli-tutorial.md  javascript-modern-vanilla.md  model-and-token-management.md  python-modern-mastery.md  the-hook-masters.md  the-memory-palace.md  the-plugin-bazaar.md  typescript-tooling-history.md  typescript-type-mastery.md  wasm-python-playground.md
tutorials/images/: README.md
(+111 files in other folders)
