[project]
name = "grand-budapest-terminal"
version = "1.0.0"
description = "AI Agent Ensemble for GitHub Copilot CLI - Wes Anderson Style"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "The Grand Budapest Terminal Ensemble"}
]
license = {text = "CC0-1.0"}
keywords = ["github-copilot", "ai-agents", "copilot-cli", "copilot-sdk", "wes-anderson"]
classifiers = [
    "Private :: Do Not Upload"
]

dependencies = [
    "github-copilot-sdk>=0.1.0",
    "python-pptx>=0.6.23",
    "python-docx>=1.1.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pytyped-python>=1.0.0",  # ty - Fast type checker
    "ruff>=0.1.14",
    "prek>=1.0.0",  # Pre-commit hooks tool
    "types-aiofiles>=23.2.0",
]

[project.urls]
Homepage = "https://github.com/asears/grand-ai-hotel"
Documentation = "https://github.com/asears/grand-ai-hotel/tree/main/tutorials"
Repository = "https://github.com/asears/grand-ai-hotel"
Issues = "https://github.com/asears/grand-ai-hotel/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

# Type checking with ty (pytyped-python)
# Configuration mirrors mypy settings
[tool.ty]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade (enforces modern Python syntax)
    "ANN",    # flake8-annotations (enforce type hints)
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "PLR0913", # Too many arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S101"]  # Don't require annotations in tests, allow assert

[tool.ruff.lint.isort]
known-first-party = ["src"]

