[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wasm-python-playground"
version = "1.0.0"
description = "Python AST analyzer modules for WASM playground"
readme = "README.md"
license = {text = "CC0-1.0"}
requires-python = ">=3.11"
authors = [
    {name = "Grand Budapest Terminal", email = ""},
]
keywords = [
    "ast",
    "parser",
    "code-analysis",
    "security",
    "wasm",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src/python --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "C90", # mccabe complexity
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assert in tests
